Time class skeleton

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,6 +27,19 @@
      <string>Current time:</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>30</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>00:00:00</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
