--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,6 +40,19 @@
      <string>00:00:00</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="ChangeTimeFormat">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>0</y>
+      <width>151</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Change Format</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
