--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,22 +92,12 @@
      </item>
     </layout>
    </widget>
-   <widget class="QLineEdit" name="setTimerIntervalInput">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>110</y>
-      <width>113</width>
-      <height>25</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="timerLabel">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>150</y>
-      <width>111</width>
+      <x>31</x>
+      <y>141</y>
+      <width>141</width>
       <height>17</height>
      </rect>
     </property>
@@ -115,17 +105,39 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="setTimerButton">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>30</x>
       <y>110</y>
-      <width>89</width>
+      <width>230</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QLineEdit" name="setTimerIntervalInput"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="setTimerButton">
+       <property name="text">
+        <string>Set Timer</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QPushButton" name="start_stopButton">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>140</y>
+      <width>80</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
-     <string>Set Timer</string>
+     <string>Start/Stop</string>
     </property>
    </widget>
   </widget>
