--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>595</width>
-    <height>278</height>
+    <height>234</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -95,49 +95,76 @@
    <widget class="QLabel" name="timerLabel">
     <property name="geometry">
      <rect>
-      <x>31</x>
-      <y>141</y>
+      <x>30</x>
+      <y>160</y>
       <width>141</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string/>
+     <string>00:00:00</string>
     </property>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>110</y>
-      <width>230</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <item>
-      <widget class="QLineEdit" name="setTimerIntervalInput"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="setTimerButton">
-       <property name="text">
-        <string>Set Timer</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </widget>
    <widget class="QPushButton" name="start_stopButton">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>140</y>
+      <x>179</x>
+      <y>159</y>
       <width>80</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>Start/Stop</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="timerInfo">
+    <property name="geometry">
+     <rect>
+      <x>299</x>
+      <y>139</y>
+      <width>231</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Insert time in &quot;hh:mm:ss&quot; format</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="setTimerIntervalInput">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>130</y>
+      <width>142</width>
+      <height>25</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="timerTitle">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>100</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; font-style:italic; color:#204a87;&quot;&gt;Timer&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setTimerButton">
+    <property name="geometry">
+     <rect>
+      <x>178</x>
+      <y>130</y>
+      <width>80</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set Timer</string>
     </property>
    </widget>
   </widget>
