--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -164,7 +164,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Set Timer</string>
+     <string>Set time</string>
     </property>
    </widget>
   </widget>
